--- a/src/main/resources/config/application-prod.example.yml
+++ b/src/main/resources/config/application-prod.example.yml
@@ -20,7 +20,6 @@ spring:
 
 app:
   cors:
-    enable: true
     allowed-origins:
       -
 
@@ -35,35 +34,40 @@ app:
 
     user-info-api-url: ''
 
-    nextcloud-uri: ''
+    nextcloud-uri: '' # You can use domain variable in case of subdomain hosting (ex: 'https://nc.${domain}')
 
     collaboration:
       websocket-api-url: ''
 
-    extended-uportal-header:
-      component-path: ''
-      context-api-url: ''
-      sign-out-url: ''
-      default-org-logo-path: ''
-      default-avatar-path: ''
-      default-org-icon-path: ''
-      favorite-api-url: ''
-      layout-api-url: ''
-      organization-api-url: ''
-      portlet-api-url: ''
-      user-info-api-url: ''
-      user-info-portlet-url: ''
-      session-api-url: ''
-      template-api-path: ''
-      switch-org-portlet-url: ''
-      favorites-portlet-card-size: ''
-      grid-portlet-card-size: ''
-      hide-action-mode: ''
-      show-favorites-in-slider: ''
-      return-home-title: ''
-      return-home-target: ''
-      icon-type: ''
+    template-api-path: ''
 
-    extended-uportal-footer:
-      component-path: ''
-      template-api-path: ''
+    extended-uportal:
+      header:
+        component-path: ''
+        props:
+          context-api-url: ''
+          sign-out-url: ''
+          default-org-logo-path: ''
+          default-avatar-path: ''
+          default-org-icon-path: ''
+          favorite-api-url: ''
+          layout-api-url: ''
+          organization-api-url: ''
+          portlet-api-url: ''
+          user-info-api-url: ''
+          user-info-portlet-url: ''
+          session-api-url: ''
+          template-api-path: ''
+          switch-org-portlet-url: ''
+          favorites-portlet-card-size: ''
+          grid-portlet-card-size: ''
+          hide-action-mode: ''
+          show-favorites-in-slider: ''
+          return-home-title: ''
+          return-home-target: ''
+          icon-type: ''
+
+      footer:
+        component-path: ''
+        props:
+          template-api-path: ''
