--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/vue-fontawesome": "^3.0.8",
     "@intlify/unplugin-vue-i18n": "^4.0.0",
+    "@juggle/resize-observer": "^3.4.0",
     "@pinia/testing": "^0.1.6",
     "@playwright/test": "^1.47.2",
     "@tsconfig/node20": "^20.1.4",
@@ -64,7 +65,6 @@
     "lodash.throttle": "^4.1.1",
     "npm-run-all2": "^6.2.3",
     "regenerator-runtime": "^0.14.1",
-    "resize-observer-polyfill": "^1.5.1",
     "sass": "^1.79.4",
     "typescript": "^5.6.2",
     "vite": "^5.4.8",
