--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -5,21 +5,21 @@
 
 version: 2
 updates:
-  - package-ecosystem: 'npm'
-    directory: '/'
+  - package-ecosystem: npm
+    directory: /
     schedule:
-      interval: 'weekly'
-      day: 'monday'
+      interval: monthly
+      day: monday
       time: '07:00'
-      timezone: 'Europe/Paris'
+      timezone: Europe/Paris
     open-pull-requests-limit: 20
     versioning-strategy: increase
 
-  - package-ecosystem: 'maven'
-    directory: '/'
+  - package-ecosystem: maven
+    directory: /
     schedule:
-      interval: 'weekly'
-      day: 'monday'
+      interval: monthly
+      day: monday
       time: '07:00'
-      timezone: 'Europe/Paris'
+      timezone: Europe/Paris
     open-pull-requests-limit: 20
